[gd_scene load_steps=14 format=3 uid="uid://bxuuwmlma1xmm"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_15kp8"]
[ext_resource type="PackedScene" uid="uid://ceuh25br64vvt" path="res://scenes/player.tscn" id="2_oqgyc"]
[ext_resource type="PackedScene" uid="uid://cmbeb4icp71di" path="res://scenes/diver_enemy.tscn" id="4_7pet0"]
[ext_resource type="AudioStream" uid="uid://cyyydy05fivsp" path="res://assets/audio/laser.ogg" id="4_8y633"]
[ext_resource type="PackedScene" uid="uid://cm23pqetbflrq" path="res://scenes/enemy.tscn" id="4_bskam"]
[ext_resource type="PackedScene" uid="uid://dniho73boedhe" path="res://scenes/hud.tscn" id="4_pq1a5"]
[ext_resource type="AudioStream" uid="uid://137oamlwx2hu" path="res://assets/audio/hit.wav" id="5_f6dy0"]
[ext_resource type="PackedScene" uid="uid://c6uejmh8c7koe" path="res://scenes/game_over_screen.tscn" id="5_wfc6m"]
[ext_resource type="AudioStream" uid="uid://b1wymalc4ru36" path="res://assets/audio/explode.wav" id="6_tmg8f"]
[ext_resource type="AudioStream" uid="uid://cmph4t8vq6q71" path="res://assets/audio/arcade.mp3" id="7_gtdjt"]
[ext_resource type="Texture2D" uid="uid://c0c5gggb417og" path="res://assets/textures/OIG4.png" id="10_lgq8g"]
[ext_resource type="Script" path="res://scripts/ProgressBar.gd" id="12_4mld6"]
[ext_resource type="Texture2D" uid="uid://j3ceo2h34erh" path="res://assets/textures/bird.png" id="12_cjp8t"]

[node name="Game" type="Node2D"]
script = ExtResource("1_15kp8")
enemy_scenes = Array[PackedScene]([ExtResource("4_bskam"), ExtResource("4_7pet0")])

[node name="SFX" type="Node" parent="."]

[node name="LaserSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_8y633")

[node name="HitSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_f6dy0")

[node name="ExplodeSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_tmg8f")

[node name="Arcade" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_gtdjt")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_pq1a5")]

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("5_wfc6m")]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 960)

[node name="PurpleStars" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("10_lgq8g")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1280, 960)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource("2_oqgyc")]
position = Vector2(636, 870)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(270, 850)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]
position = Vector2(1, -1)

[node name="Bird" type="CharacterBody2D" parent="."]
visible = false

[node name="BirdSprite" type="Sprite2D" parent="Bird"]
position = Vector2(-144, 107)
rotation = -0.127409
scale = Vector2(0.552, 0.444)
skew = 0.0628318
texture = ExtResource("12_cjp8t")

[node name="BirdTimer" type="Timer" parent="Bird"]
wait_time = 2.0
one_shot = true

[node name="LoadingScene" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="LoadingScene"]
layout_mode = 1
anchors_preset = -1
anchor_left = 9.0
anchor_top = 2.012
anchor_right = 24.05
anchor_bottom = 2.525
offset_left = 4.0
offset_top = -12.48
offset_right = -6.10352e-05
script = ExtResource("12_4mld6")

[node name="Label" type="Label" parent="LoadingScene/ProgressBar"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -257.0
offset_top = 8.0
offset_right = -769.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="LoadingScene/ProgressBar"]
wait_time = 5.0

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="Bird/BirdTimer" to="." method="_on_bird_timer_timeout"]
